Don't null-deref if pView is not present

And default to COL_WHITE as view background if not present.

Related: tdf#168710
Change-Id: I184fb018d16ac83381b689093e751167bad2c2fb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197223
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/197565
Tested-by: Miklos Vajna <vmiklos@collabora.com>